--- a/w5-weather-app/index.html
+++ b/w5-weather-app/index.html
@@ -89,6 +89,13 @@
           </div>
         </div>
       </div>
+      <br /><br /><br />
+      <footer>
+        <a href="https://github.com/Itzelmariana/01-my-first-weather-app"
+          >Open source code
+        </a>
+        by Itzel Mariana Cole
+      </footer>
     </div>
     <script src="src/index.js"></script>
   </body>
