--- a/w5-weather-app/index.html
+++ b/w5-weather-app/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="maindisplay">
           <div class="row">
-            <div class="col">
+            <div class="col-3">
               <h2 class="displaycity">Texas</h2>
               <ul>
                 <li class="currentmain">Saturday 15:53</li>
@@ -39,7 +39,7 @@
             <span class="col-1 celmain" id="c">°C</span>
             <span class="col-1" id="sep">|</span>
             <span class="col-1 fahmain" id="f">°F</span>
-            <div class="col">
+            <div class="col-2">
               <ul class="detailsmain">
                 <li>Wind:<span id="wind">0</span>
                 </li>
