--- a/w5-weather-app/index.html
+++ b/w5-weather-app/index.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <link href="src/styles.css" rel="stylesheet"/>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://kit.fontawesome.com/04da681cff.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -37,11 +36,9 @@
             </div>
             <div class="col-1 tempeturemain" id="maintemp">33</div>
             <span class="col-1 celmain" id="c">°C</span>
-            <span class="col-1" id="sep">|</span>
-            <span class="col-1 fahmain" id="f">°F</span>
             <div class="col-2">
               <ul class="detailsmain">
-                <li>Wind:<span id="wind">0</span>
+                <li>Wind:<span id="wind"></span>km/h
                 </li>
                 <li>
                   Humidity:<span id="humidity"></span>%
@@ -50,47 +47,11 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col week1">
-            <h5>Sun</h5>
-            <p class="emojiweek">
-              <i class="fa-solid fa-cloud-sun"></i>
-            </p>
-            <p class="weektempeture">37°C</p>
-          </div>
-          <div class="col week2">
-            <h5>Mon</h5>
-            <p class="emojiweek">
-              <i class="fa-solid fa-cloud-sun"></i>
-            </p>
-            <p class="weektempeture">28°C</p>
-          </div>
-          <div class="col week3">
-            <h5>Tue</h5>
-            <p class="emojiweek">
-              <i class="fa-solid fa-cloud-sun"></i>
-            </p>
-            <p class="weektempeture">29°C</p>
-          </div>
-          <div class="col week4">
-            <h5>Wed</h5>
-            <p class="emojiweek">
-              <i class="fa-solid fa-cloud"></i>
-            </p>
-            <p class="weektempeture">30°C</p>
-          </div>
-          <div class="col week5">
-            <h5>Thu</h5>
-            <p class="emojiweek">
-              <i class="fa-solid fa-sun"></i>
-            </p>
-            <p class="weektempeture">33°C</p>
-          </div>
-        </div>
+     <div class="weather-forecast" id="forecast"></div>
       </div>
       <br/><br/><br/>
       <footer>
-        <a href="https://github.com/Itzelmariana/01-my-first-weather-app">Open source code
+        <a href="https://github.com/Itzelmariana/01-my-first-weather-app" target="_blank">Open source code
         </a>
         by Itzel Mariana Cole
       </footer>
